--- a/manifest.json
+++ b/manifest.json
@@ -15,5 +15,14 @@
         "https://delta.mil.gov.ua/monitor/map"
       ]
     }
+  ],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "permissions": [
+    "webRequest"
+  ],
+  "host_permissions": [
+    "https://delta.mil.gov.ua/"
   ]
 }
