--- a/manifest.json
+++ b/manifest.json
@@ -20,7 +20,8 @@
     "service_worker": "background.js"
   },
   "permissions": [
-    "webRequest"
+    "webRequest",
+    "storage"
   ],
   "host_permissions": [
     "https://delta.mil.gov.ua/"
